--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
 <!-- <meta charset="utf-8"/> -->
 	<link rel="stylesheet" type="text/css" href="minesweeper.css">
+	<script type="https://telegram.org/js/telegram-web-app.js"></script>
 	<script src="minesweeper.js" defer></script>
 </head>
 	<body>
@@ -30,4 +31,5 @@
 	<div class="board"></div>
 </div>
 <div class="endscreen"></div>
+<script>tg.expand();</script>
 </body>
