--- a/bilet/test.html
+++ b/bilet/test.html
@@ -2,29 +2,52 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<script src="js.js" defer></script>
+	<title> Билет 17 </title>
 </head>
-<html>
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Билет 17</title>
 </head>
 <body>
-	<button id="buttonAnswer"></button>
+	<div id="buttonPanel" class="btn-group btn-group-sm">
+		<button type="button" class="btn btn-success" id="btn_0">1</button>
+		<button type="button" class="btn btn-success" id="btn_1">2</button>
+		<button type="button" class="btn btn-success" id="btn_2">3</button>
+		<button type="button" class="btn btn-success" id="btn_3">4</button>
+		<button type="button" class="btn btn-success" id="btn_4">5</button>
+		<button type="button" class="btn btn-success" id="btn_5">6</button>
+		<button type="button" class="btn btn-success" id="btn_6">7</button>
+		<button type="button" class="btn btn-success" id="btn_7">8</button>
+		<button type="button" class="btn btn-success" id="btn_8">9</button>
+		<button type="button" class="btn btn-success" id="btn_9">10</button>
+		<button type="button" class="btn btn-success" id="btn_10">11</button>
+		<button type="button" class="btn btn-success" id="btn_11">12</button>
+		<button type="button" class="btn btn-success" id="btn_12">13</button>
+		<button type="button" class="btn btn-success" id="btn_13">14</button>
+		<button type="button" class="btn btn-success" id="btn_14">15</button>
+		<button type="button" class="btn btn-success" id="btn_15">16</button>
+		<button type="button" class="btn btn-success" id="btn_16">17</button>
+		<button type="button" class="btn btn-success" id="btn_17">18</button>
+		<button type="button" class="btn btn-success" id="btn_18">19</button>
+		<button type="button" class="btn btn-success" id="btn_19">20</button>
+
+	</div>
+
+	<div class="question">
+		<span class="text" id="question">Question loading...</span>
+	</div>
+
+	<div class="list-group">
+		<button id="answer-item1"></button>
+		<button id="answer-item2"></button>
+		<button id="answer-item3"></button>
+		<button id="answer-item4"></button>
+		<button id="answer-item5"></button>
+	</div>
+
+
 	<!-- <div class = "buttonAnswer"><answer id="buttonAnswer"><answer></div> -->
 </body>
 </html>
-
-
-<!-- Являются ли тротуары и обочины частью дороги? -->
-	<!-- 1. Являются.			<-
-		2. Являются только обочины.
-		3. Не являются. -->
-<!-- (КАРТИНКА) На каком расстоянии до неровного участка дороги устанавливается этот знак вне населенного пункта? -->
-	<!-- 1. 150-300 м.			<-
-	2. 50-100 м.
-	3. Непосредственно перед неровным участком дороги. -->
-<!-- (КАРТИНКА) Требования каких знаков из указанных вступают в силу непосредственно в том месте, где они установлены? -->
-	<!-- 1. Только Б.
-	2. А и Б.					<-
-	3. Всех. -->
