--- a/bilet/test.html
+++ b/bilet/test.html
@@ -11,27 +11,27 @@
 	<title>Билет 17</title>
 </head>
 <body>
-	<div id="buttonPanel" class="btn-group btn-group-sm">
-		<button type="button" class="btn btn-success" id="btn_0">1</button>
-		<button type="button" class="btn btn-success" id="btn_1">2</button>
-		<button type="button" class="btn btn-success" id="btn_2">3</button>
-		<button type="button" class="btn btn-success" id="btn_3">4</button>
-		<button type="button" class="btn btn-success" id="btn_4">5</button>
-		<button type="button" class="btn btn-success" id="btn_5">6</button>
-		<button type="button" class="btn btn-success" id="btn_6">7</button>
-		<button type="button" class="btn btn-success" id="btn_7">8</button>
-		<button type="button" class="btn btn-success" id="btn_8">9</button>
-		<button type="button" class="btn btn-success" id="btn_9">10</button>
-		<button type="button" class="btn btn-success" id="btn_10">11</button>
-		<button type="button" class="btn btn-success" id="btn_11">12</button>
-		<button type="button" class="btn btn-success" id="btn_12">13</button>
-		<button type="button" class="btn btn-success" id="btn_13">14</button>
-		<button type="button" class="btn btn-success" id="btn_14">15</button>
-		<button type="button" class="btn btn-success" id="btn_15">16</button>
-		<button type="button" class="btn btn-success" id="btn_16">17</button>
-		<button type="button" class="btn btn-success" id="btn_17">18</button>
-		<button type="button" class="btn btn-success" id="btn_18">19</button>
-		<button type="button" class="btn btn-success" id="btn_19">20</button>
+	<div id="buttonPanel" class="btn-group">
+		<div class="currentQuestion-btn" id="btn_0"></div>
+		<div class="currentQuestion-btn" id="btn_1"></div>
+		<div class="currentQuestion-btn" id="btn_2"></div>
+		<div class="currentQuestion-btn" id="btn_3"></div>
+		<div class="currentQuestion-btn" id="btn_4"></div>
+		<div class="currentQuestion-btn" id="btn_5"></div>
+		<div class="currentQuestion-btn" id="btn_6"></div>
+		<div class="currentQuestion-btn" id="btn_7"></div>
+		<div class="currentQuestion-btn" id="btn_8"></div>
+		<div class="currentQuestion-btn" id="btn_9"></div>
+		<div class="currentQuestion-btn" id="btn_10"></div>
+		<div class="currentQuestion-btn" id="btn_11"></div>
+		<div class="currentQuestion-btn" id="btn_12"></div>
+		<div class="currentQuestion-btn" id="btn_13"></div>
+		<div class="currentQuestion-btn" id="btn_14"></div>
+		<div class="currentQuestion-btn" id="btn_15"></div>
+		<div class="currentQuestion-btn" id="btn_16"></div>
+		<div class="currentQuestion-btn" id="btn_17"></div>
+		<div class="currentQuestion-btn" id="btn_18"></div>
+		<div class="currentQuestion-btn" id="btn_19"></div>
 
 	</div>
 
@@ -40,11 +40,11 @@
 	</div>
 
 	<div class="list-group">
-		<button id="answer-item1"></button>
-		<button id="answer-item2"></button>
-		<button id="answer-item3"></button>
-		<button id="answer-item4"></button>
-		<button id="answer-item5"></button>
+		<div id="answer-item1" class="custom-button"></div>
+		<div id="answer-item2" class="custom-button"></div>
+		<div id="answer-item3" class="custom-button"></div>
+		<div id="answer-item4" class="custom-button"></div>
+		<div id="answer-item5" class="custom-button"></div>
 	</div>
 
 
