--- a/bilet/test.html
+++ b/bilet/test.html
@@ -32,9 +32,8 @@
 		<div class="currentQuestion-btn" id="btn_17"></div>
 		<div class="currentQuestion-btn" id="btn_18"></div>
 		<div class="currentQuestion-btn" id="btn_19"></div>
-
 	</div>
-
+	<img src="" class="image-question" id="image" alt="Картинка">
 	<div class="question">
 		<span class="text" id="question">Question loading...</span>
 	</div>
